glance/glance/templates/deployment-api.yaml
---
# Source: glance/templates/deployment-api.yaml


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-api
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: release-name
    application: glance
    component: api
spec:
  replicas: 2
  selector:
    matchLabels:
      release_group: release-name
      application: glance
      component: api
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: release-name
        application: glance
        component: api
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "1723abbb94d369749f1d0b444d4a5cc1e27859c610add9f0caa15cf2a752f310"
        configmap-etc-hash: "a4065137373b5d5d188b5251bbb1b6e2fc5579bf100b0db8ad2d56ba1b238753"
        
    spec:
      serviceAccountName: glance-api
      securityContext:
        runAsUser: 42424
        
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - release-name
                  - key: application
                    operator: In
                    values:
                    - glance
                  - key: component
                    operator: In
                    values:
                    - api
                  
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 600
      containers:
        - name: glance-api
          image: "docker.io/openstackhelm/glance:stein-ubuntu_bionic"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            
          command:
            - /tmp/glance-api.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/glance-api.sh
                  - stop
          ports:
            - name: g-api
              containerPort: 9292
          readinessProbe:
            tcpSocket:
              port: 9292
          livenessProbe:
            tcpSocket:
              port: 9292
            initialDelaySeconds: 30
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: etcglance
              mountPath: /etc/glance
            - name: glance-bin
              mountPath: /tmp/glance-api.sh
              subPath: glance-api.sh
              readOnly: true
            - name: glance-etc
              mountPath: /etc/glance/glance-api.conf
              subPath: glance-api.conf
              readOnly: true
            - name: glance-etc
              mountPath: /etc/glance/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: glance-etc
              mountPath: /etc/glance/glance-api-paste.ini
              subPath: glance-api-paste.ini
              readOnly: true
            - name: glance-etc
              mountPath: /etc/glance/policy.json
              subPath: policy.json
              readOnly: true
            - name: glance-etc
              mountPath: /etc/glance/api_audit_map.conf
              subPath: api_audit_map.conf
              readOnly: true
            - name: glance-etc
              mountPath: /etc/glance/swift-store.conf
              subPath: swift-store.conf
              readOnly: true
            - name: glance-images
              mountPath: /var/lib/glance/images

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: etcglance
          emptyDir: {}
        - name: glance-bin
          configMap:
            name: glance-bin
            defaultMode: 0555
        - name: glance-etc
          secret:
            secretName: glance-etc
            defaultMode: 0444
        - name: glance-images
          emptyDir: {}
