glance/glance/templates/deployment-registry.yaml
---
# Source: glance/templates/deployment-registry.yaml


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-registry
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: release-name
    application: glance
    component: registry
spec:
  replicas: 2
  selector:
    matchLabels:
      release_group: release-name
      application: glance
      component: registry
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: release-name
        application: glance
        component: registry
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "1723abbb94d369749f1d0b444d4a5cc1e27859c610add9f0caa15cf2a752f310"
        configmap-etc-hash: "e6f63180b04990ab242f165b86035ef3a99cc3a0f644d134b2e4e9475fcfdc60"
        
    spec:
      serviceAccountName: glance-registry
      securityContext:
        runAsUser: 42424
        
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - release-name
                  - key: application
                    operator: In
                    values:
                    - glance
                  - key: component
                    operator: In
                    values:
                    - registry
                  
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 600
      containers:
        - name: glance-registry
          image: "docker.io/openstackhelm/glance:stein-ubuntu_bionic"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            
          command:
            - /tmp/glance-registry.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/glance-registry.sh
                  - stop
          ports:
            - name: g-reg
              containerPort: 9191
          readinessProbe:
            tcpSocket:
              port: 9191
          livenessProbe:
            tcpSocket:
              port: 9191
            initialDelaySeconds: 30
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: etcglance
              mountPath: /etc/glance
            - name: glance-bin
              mountPath: /tmp/glance-registry.sh
              subPath: glance-registry.sh
              readOnly: true
            - name: glance-etc
              mountPath: /etc/glance/glance-registry.conf
              subPath: glance-registry.conf
              readOnly: true
            - name: glance-etc
              mountPath: /etc/glance/api_audit_map.conf
              subPath: api_audit_map.conf
              readOnly: true
            - name: glance-etc
              mountPath: /etc/glance/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: glance-etc
              mountPath: /etc/glance/glance-registry-paste.ini
              subPath: glance-registry-paste.ini
              readOnly: true
            - name: glance-etc
              mountPath: /etc/glance/policy.json
              subPath: policy.json
              readOnly: true

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: etcglance
          emptyDir: {}
        - name: glance-bin
          configMap:
            name: glance-bin
            defaultMode: 0555
        - name: glance-etc
          secret:
            secretName: glance-etc
            defaultMode: 0444
