glance/glance/templates/service-ingress-api.yaml
---
# Source: glance/templates/service-ingress-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glance
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: ingress-api
