glance/glance/templates/service-ingress-registry.yaml
---
# Source: glance/templates/service-ingress-registry.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glance-reg
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: ingress-api
